--- a/html project2.html
+++ b/html project2.html
@@ -7,15 +7,17 @@
 <meta charset="UTF-8">  
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">   
-
- <title>Delicious Bites Menu</title> </head>
+<!-- title of the page-->
+ <title>Mamoureine Restaurant </title> </head>
 
  <body>   
-
- <h1>Delicious Bites Menu</h1>
-
+<!-- Main content Menu -->
+ 
+ <div style="background-color: rgb(243, 145, 238);">
+ <center><h1>Mamoureine Menu</h1></center>
+<!--appetizer items with descriptions --> 
     <h2>Appetizers</h2>  
-
+ 
   <ul>     
 
    <li>          
@@ -25,12 +27,25 @@
      <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p> 
 
        </li>    
+ <li>          
 
-    <!-- Add two more appetizer items with descriptions --> 
+  <strong>Exotic Salad</strong>       
+
+     <p>Fresh fruits, nuts, and mixed greens drizzled with a citrus vinaigrette.</p>
+
+       </li>   
+        <li>          
+
+  <strong>Nicoise Salad</strong>       
+
+     <p>Fresh tomatoes, green beans, hard-boiled eggs, and olives drizzled with vinaigrette.</p>
+
+       </li>   
 
    </ul>  
 
-  <h2>Main Courses</h2> 
+   <!-- main course items with descriptions -->  
+    <h2>Main Courses</h2>  
 
    <ul>   
 
@@ -41,11 +56,25 @@
        <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce.</p>   
 
      </li>     
+     <li>      
 
-   <!-- Add two more main course items with descriptions --> 
+      <strong>Grilled Chicken</strong>     
 
-   </ul>   
+       <p>Marinated chicken breast grilled to perfection, served with a side of vegetables.</p>   
 
+     </li>     
+     <li>      
+
+      <strong>Mix Grilled</strong>     
+
+       <p>Assorted grilled vegetables and meats, served with a tangy dipping sauce.</p>   
+
+     </li>     
+
+
+   </ul> 
+<!-- dessert items with descriptions --> 
+ 
  <h2>Desserts</h2>  
 
   <ul>     
@@ -57,12 +86,25 @@
        <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>    
 
     </li>    
+     <li>    
 
-    <!-- Add two more dessert items with descriptions -->  
+        <strong>ice cream</strong>     
+
+       <p>Assorted flavors of ice cream served with a variety of toppings.</p>    
+
+    </li>    
+     <li>    
+
+        <strong>Cup cakes</strong>     
+
+       <p>Assorted flavors of cupcakes topped with creamy frosting.</p>    
+
+    </li>    
+    
 
   </ul> 
 
-   <p><a href="contact.html">Contact us for reservations</a></p> 
+   <p><a href="reservation.html">you can make your reservation here!!!</a></p> 
 
 </body>
 
