reservation field modified

--- a/html project2.html
+++ b/html project2.html
@@ -104,7 +104,7 @@
 
   </ul> 
 
-   <p><a href="reservation.html">you can make your reservation here!!!</a></p> 
+   <p><a href="reservation.html">click here to make a reservation!!!</a></p> 
 
 </body>
 
