--- a/html project2.html
+++ b/html project2.html
@@ -105,6 +105,10 @@
   </ul> 
 
    <p><a href="reservation.html">click here to make a reservation!!!</a></p> 
+   <footer>
+     <center><p>&copy; 2025 Mamoureine Restaurant. All rights reserved.</p></center>
+   </footer>
+
 
 </body>
 
